# testcase-gen

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  config.yaml.example  db.py  docker-compose.yml  generator.py  gunicorn.conf.py  llm_client.py  main.py  output.py  preferences.py  pyproject.toml  reader.py  requirements-dev.txt  requirements.txt  reviewer.py  start.py  web.py  web_auth.py  web_config.py  web_data.py  web_generate.py  web_utils.py
core/: __init__.py  config.py  db.py  generator.py  llm_client.py  output.py  preferences.py  reader.py  reviewer.py  xmind_utils.py
examples/: sample_requirement.md
static/: app.js  style.css
templates/: index.html
tests/: conftest.py  test_db.py  test_generator.py  test_regression.py  test_web_api.py
web/: __init__.py  auth.py  config_routes.py  data.py  generate.py  utils.py
